#4 /objにargsを渡すよう変更

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p これはMountConverterのトップページです
+  p お手元のOSC receiverを利用し、messageがsendされているかご確認ください
